kubernetes-networks/dashboard/dash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: ingress.local
      http:
        paths:
           - path: /dashboard(/|$)(.*)
             pathType: Prefix
             backend:
               service:
                 name: kubernetes-dashboard-web
                 port:
                   number: 8000
